# alanard-game-c-

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  main.cpp
framework/: ALApp.cpp  ALConfig.cpp  ALWSFrame.cpp  AObject.cpp  CMakeLists.txt  Makefile  filename.json  me
framework/include/: AErr.hpp  AGameObject.hpp  ALApp.hpp  ALConfig.hpp  ALWSFrame.hpp  ALWSHandler.hpp  AObject.hpp  nlohmann  rapidjson
framework/include/network/: ALTCPServer.hpp  ALUDPServer.hpp  ALWSHandler.hpp
framework/network/: ALTCPServer.cpp  ALUDPServer.cpp  ALWSHandler.cpp
framework/network/include/: TCPServer.hpp
network/: Packet.cpp  Packet.h  Protocols.h
python/: README.md  generate.py  generate.py~  protoconfig.xml
test/: test1.cpp  websocket.html
